--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <nav>
         <a href="#">Главная</a> <!-- # - заглушка -->
         <a href="./catalog/catalog.html">Каталог</a>
+        <a href="#">Контакты</a>
     </nav>
     <h1>Главная страница</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quasi molestias mollitia consequuntur, 
@@ -17,5 +18,8 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, animi reiciendis?</p>
     <p>Lorem ipsum dolor sit amet consectetur.</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et a odio accusantium!</p>
+
+    <a href="https://vk.com" target="_blank"><img src="/img/vk.webp" alt="vk" width="40"></a>
+    <a href="https://mail.ru" target="_blank"><img src="/img/mail.webp" alt="mail" width="40"></a>
 </body>
 </html>
