--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -9,6 +9,7 @@
     <nav>
         <a href="../index.html">Главная</a>
         <a href="./catalog.html">Каталог</a>
+        <a href="#">Контакты</a>
     </nav>
     <h1>Каталог</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi asperiores soluta sunt ab. Corporis dolore cum, 
@@ -30,5 +31,16 @@
     <img src="../img/fresh.avif" alt="Напиток" width="120">
     <h2>Блюдо 3</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, et.</p>
+    <form>
+        <input type="text" placeholder="Введите ваше имя">
+        <br />
+        <br />
+
+        <input type="email" placeholder="Введите ваш email">
+        <br />
+        <br />
+        <button type="submit">Отправить</button>
+        <button type="reset">Стереть</button>
+    </form>
 </body>
 </html>
