--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Каталог</title>
 </head>
 <body>
     <nav>
-        <a href="../index.html">Главная</a>
-        <a href="./catalog.html">Каталог</a>
-        <a href="#">Контакты</a>
+        <a class="menu-links" href="../index.html">Главная</a>
+        <a class="menu-links" href="./catalog.html">Каталог</a>
+        <a class="menu-links" href="#">Контакты</a>
     </nav>
-    <h1>Каталог</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi asperiores soluta sunt ab. Corporis dolore cum, 
+    <h1 class="header-style">Каталог</h1>
+    <p class="paragraph-style">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi asperiores soluta sunt ab. Corporis dolore cum, 
         provident officia iure perferendis suscipit ullam dicta, hic non quaerat quo at aperiam sunt. Officiis hic corrupti 
         sed dicta aut numquam similique alias deserunt delectus amet quae, laborum explicabo porro perspiciatis fuga 
         perferendis nesciunt quis deleniti magni quaerat quasi necessitatibus, quam qui sint! Expedita perspiciatis fugit quis
@@ -23,24 +24,25 @@
         Doloremque, sint eum! Quasi officia in magni nostrum delectus voluptates perferendis velit dolorem quisquam sint numquam voluptatem 
         vero, et voluptatibus minima quas unde ad?</p>
     <img src="../img/borscht.avif" alt="Борщ" width="120">
-    <h2>Блюдо 1</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, et.</p>
+    <h2 class="h2-style">Блюдо 1</h2>
+    <p class="paragraph-style">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, et.</p>
     <img src="../img/cake.avif" alt="Кекс" width="120">
-    <h2>Блюдо 2</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, et.</p>
+    <h2 class="h2-style">Блюдо 2</h2>
+    <p class="paragraph-style">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, et.</p>
     <img src="../img/fresh.avif" alt="Напиток" width="120">
-    <h2>Блюдо 3</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, et.</p>
+    <h2 class="h2-style">Блюдо 3</h2>
+    <p class="paragraph-style">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, et.</p>
     <form>
-        <input type="text" placeholder="Введите ваше имя">
-        <br />
-        <br />
+        <input type="text" placeholder="Введите ваше имя"><br><br>
 
-        <input type="email" placeholder="Введите ваш email">
+        <input type="email" placeholder="Введите ваш email"><br><br>
+        <input type="password" placeholder="Введите Пароль">
         <br />
         <br />
         <button type="submit">Отправить</button>
         <button type="reset">Стереть</button>
     </form>
+    <br>
+    <a href="#top">Верх</a>
 </body>
 </html>
