--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Главная</title>
 </head>
 <body>
     <nav>
-        <a href="#">Главная</a> <!-- # - заглушка -->
-        <a href="./catalog/catalog.html">Каталог</a>
-        <a href="#">Контакты</a>
+        <a class="menu-links" href="#">Главная </a> <!-- # - заглушка -->
+        <a class="menu-links" href="./catalog/catalog.html">Каталог</a>
+        <a class="menu-links" href="#">Контакты</a>
     </nav>
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quasi molestias mollitia consequuntur, 
+    <h1 class="header-style">Главная страница</h1>
+    <p class="paragraph-style">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quasi molestias mollitia consequuntur, 
         nisi omnis est sunt! Sint hic sit, soluta numquam illo tempora beatae labore pariatur quod consectetur similique.</p>
-        <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, animi reiciendis?</p>
-    <p>Lorem ipsum dolor sit amet consectetur.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et a odio accusantium!</p>
+        <h2 class="h2-style">Добро пожаловать на сайт</h2>
+    <p class="paragraph-style">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, animi reiciendis?</p>
+    <p class="paragraph-style">Lorem ipsum dolor sit amet consectetur.</p>
+    <p class="paragraph-style">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et a odio accusantium!</p>
 
     <a href="https://vk.com" target="_blank"><img src="/img/vk.webp" alt="vk" width="40"></a>
     <a href="https://mail.ru" target="_blank"><img src="/img/mail.webp" alt="mail" width="40"></a>
